--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,25 @@ code {
   display: inline-block;
 }
 
+/* styles.css */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Light gray */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888; /* Dark gray */
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Darker gray */
+}
+
 
 /* p {
   margin: 10px 0;
